feat: cooked footer into app properly, feat: made app name consistent to all screen sizes for now, refactor: renamed main div as section for better SEO, feat: optimized scroller

--- a/src/components/Footer/PrivacyPolicy/PrivacyPolicy.css
+++ b/src/components/Footer/PrivacyPolicy/PrivacyPolicy.css
@@ -1,5 +1,4 @@
 #privacy-policy-container {
-    height: calc(100dvh - 3.5em);
-    padding-left: 5em;
-    padding-right: 5em;
+    height: fit-content;
+    padding: 5em;
 }
