--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,4 +2,13 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: #dbdbdb;
+    position: relative;
+    z-index: 1;
+}
+
+#privacy-policy-link {
+    text-decoration: none;
+    color: inherit;
 }
