--- a/src/components/Main/Body/Body.css
+++ b/src/components/Main/Body/Body.css
@@ -1,8 +1,11 @@
 #main-container {
     display: flex;
     justify-content: center;
-    height: calc(100dvh - 3.5em);
+    height: calc(100dvh - 3.5em - 24px);
     width: 100%;
     position: relative;
     z-index: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
