--- a/src/components/Footer/PrivacyPolicy/PrivacyPolicy.css
+++ b/src/components/Footer/PrivacyPolicy/PrivacyPolicy.css
@@ -1,4 +1,20 @@
 #privacy-policy-container {
     height: fit-content;
-    padding: 5em;
+    padding-left: 5em;
+    padding-right: 5em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+#disclaimer {
+    color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 1em;
+    padding: 1em;
+    margin-bottom: 1em;
 }
