refactor: migrated to using css vars to manage themes and layout. the themes are for creating dark and light themes eventually, fix: fixed error none found message didn't appear correctly

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,11 @@
+@import '../../styles/themes.css';
+
 #footer-container {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #dbdbdb;
+    background-color: var(--light-bg-color-1);
     position: relative;
     z-index: 1;
 }
