fix: fixed right side nav bar in account center page, feat: moved toasts a bit upwards in small screens

--- a/src/components/Common/Toasts/Toasts.css
+++ b/src/components/Common/Toasts/Toasts.css
@@ -21,6 +21,7 @@ strong {
 @media screen and (max-width: 576px) {
     .toast {
         width: 90%;
+        bottom: 1em;
         right: calc(50% - 178px);
     }
 }
