feat: added shadow to dropdowns, feat: added an add plug button with modal, fix: removed not necessary dividers in sidebar, feat: prettified sidebar header, refactor: removed CSS duplications, feat: added right side header to dashboard and account center, feat: added hovering color to plugs in list view, feat: disabled search button in empty search input, feat: prettified dashboard's table

--- a/src/components/Main/ListItem/ListItem.css
+++ b/src/components/Main/ListItem/ListItem.css
@@ -8,6 +8,10 @@
     height: 145px;
 }
 
+.list-item-plugin:hover {
+    background-color: #efefef;
+}
+
 .list-image-container {
     width: 30%;
     max-width: 200px;
