--- a/src/components/SeekingTools/SearchBox/SearchBox.css
+++ b/src/components/SeekingTools/SearchBox/SearchBox.css
@@ -1,3 +1,7 @@
+#search-box-container {
+    margin-bottom: 1em;
+}
+
 .plugins-filter-input {
     border-top: 1px solid #6c757d;
     border-bottom: 1px solid #6c757d;
