--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,7 @@
 .form-control:focus {
     box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.25) !important;
 }
+
+.dropdown-menu {
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .15);
+}
