refactor: working on editing modal

--- a/src/pages/PlugPage/PlugPage.css
+++ b/src/pages/PlugPage/PlugPage.css
@@ -12,6 +12,11 @@
     height: fit-content;
 }
 
+#plug-page-details {
+    display: flex;
+    justify-content: space-between;
+}
+
 @media screen and (max-width:576px) {
     .list-item {
         max-width: 98%;
