--- a/src/pages/PlugPage/PlugPage.css
+++ b/src/pages/PlugPage/PlugPage.css
@@ -17,6 +17,12 @@
     justify-content: space-between;
 }
 
+.action-buttons {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 @media screen and (max-width:576px) {
     .list-item {
         max-width: 98%;
