--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -2,6 +2,7 @@
     --light-bg-color-1: #dbdbdb;
     --light-bg-color-2: #e9e9e9;
     --light-bg-color-3: #ffffff;
+    --light-bg-color-4: #f4f4f4;
     --light-color-1: #646464;
     --light-color-2: #757575;
 }
