--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -8,7 +8,7 @@ nav {
     width: 100%;
     background-color: var(--light-bg-color-1);
     padding: 10px;
-    color: rgb(100, 100, 100);
+    color: var(--light-color-1);
     z-index: 2;
     height: var(--header-height);
     display: flex;
