--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -3,6 +3,7 @@
     --light-bg-color-2: #e9e9e9;
     --light-bg-color-3: #ffffff;
     --light-bg-color-4: #f4f4f4;
+    --light-bg-color-5: #dfdfdf;
     --light-color-1: #646464;
     --light-color-2: #757575;
 }
