feat: added colors to delete and edit dialogs, fix: fixed height of ai wingow in small screens

--- a/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
+++ b/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
@@ -28,11 +28,12 @@
 }
 
 .generated {
-    height: 14em;
     overflow-y: auto;
     background-color: #ffffff;
     border-radius: 0.25rem;
     scrollbar-width: none;
+    margin-bottom: 1em;
+    flex: 1;
 }
 
 #temp-msg {
