--- a/src/pages/AccountPage/SubRoutes.css
+++ b/src/pages/AccountPage/SubRoutes.css
@@ -20,8 +20,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 1em;
     width: 80%;
+    height: 40%;
 }
 
 .sub-route-list-wrapper {
