refactor: change account page to settings page

--- a/src/pages/SettingsPage/Personal/Personal.css
+++ b/src/pages/SettingsPage/Personal/Personal.css
@@ -58,6 +58,11 @@
 }
 
 @media screen and (min-width: 768px) {
+    .account-sections {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
     .header-line {
         width: 80%;
     }
