--- a/src/pages/SettingsPage/SubRoutes.css
+++ b/src/pages/SettingsPage/SubRoutes.css
@@ -38,6 +38,7 @@
     border-radius: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .sub-route-list-item:first-child {
