--- a/src/pages/AdminsPage/Users/Users.css
+++ b/src/pages/AdminsPage/Users/Users.css
@@ -1,9 +1,19 @@
+.table-wrapper {
+    padding: 1em;
+    width: 100%;
+    height: fit-content;
+}
+
 #admins-table {
-    margin: 3em;
     text-align: center;
     height: fit-content;
+    margin-bottom: 0;
 }
 
 .users-tr {
     vertical-align: middle;
+}
+
+tbody {
+    word-break: break-all;
 }
