feat: now the back button is smart by history including a title

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -16,6 +16,12 @@ nav {
     justify-content: space-between;
 }
 
+#nav-left-container {
+    line-height: normal;
+    display: flex;
+    align-items: center;
+}
+
 #logo-name {
     text-decoration: none;
     color: inherit;
