--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -40,6 +40,7 @@
 .modal-dropdown-item {
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .modal-dropdown-item-content {
