--- a/src/pages/SettingsPage/SubRoutes.css
+++ b/src/pages/SettingsPage/SubRoutes.css
@@ -32,8 +32,20 @@
     width: 100%;
 }
 
+.total-and-filter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .total-header {
     padding-left: 0.25em;
+    margin-bottom: 0;
+}
+
+.filter-icon {
+    display: flex;
+    align-items: center;
 }
 
 .sub-route-list-wrapper {
