--- a/src/styles/auth-card.css
+++ b/src/styles/auth-card.css
@@ -19,6 +19,17 @@ form {
     text-align: center;
 }
 
+#forgot-password-announcement {
+    text-align: center;
+    padding-bottom: 1.5em;
+}
+
+#forgot-password-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: end;
+}
+
 h3 {
     margin-bottom: 0;
 }
