--- a/src/pages/SettingsPage/SubRoutes.css
+++ b/src/pages/SettingsPage/SubRoutes.css
@@ -4,6 +4,12 @@
     width: 100%;
 }
 
+.contributions-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .empty-sub-route-list-wrapper {
     display: flex;
     align-items: center;
