--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -70,3 +70,29 @@
 #new-plug-img {
     width: 100%;
 }
+
+.shake-text {
+    animation: shake 0.4s ease-in-out;
+}
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-5px);
+    }
+
+    50% {
+        transform: translateX(5px);
+    }
+
+    75% {
+        transform: translateX(-5px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
