--- a/src/pages/SettingsPage/SubRoutes.css
+++ b/src/pages/SettingsPage/SubRoutes.css
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
 }
 
 .empty-sub-route-list {
@@ -56,11 +57,15 @@
 
 .sub-route-list-wrapper {
     width: 100%;
-    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    height: -webkit-fill-available;
 }
 
 .sub-route-list {
     padding-bottom: 1em;
+    flex: 1;
+    overflow-y: auto;
 }
 
 .sub-route-list-item {
