feat: added colored divider in some needed places, feat: added link to main in privacy policy page, fix: now scroller scrolls smoothly in privacy policy page, feat: added scroller in activity, users, contributions, owned plugins and wishlist pages

--- a/src/components/Main/Body/Body.css
+++ b/src/components/Main/Body/Body.css
@@ -9,7 +9,7 @@
     z-index: 1;
     overflow-y: auto;
     overflow-x: hidden;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth !important;
 }
 
 @media screen and (min-width: 769px) {
