--- a/src/components/Common/Scroller/Scroller.css
+++ b/src/components/Common/Scroller/Scroller.css
@@ -1,5 +1,4 @@
 #scroller-container {
-    position: absolute;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -13,6 +12,7 @@
     border-radius: 100%;
     cursor: pointer;
     transition: bottom 0.2s ease-in;
+    z-index: 2;
 }
 
 #scroller:active {
