--- a/src/pages/PlugPage/PlugPage.css
+++ b/src/pages/PlugPage/PlugPage.css
@@ -19,11 +19,17 @@
     border-radius: 1.2em;
 }
 
+.plug-buttons {
+    border-top: 1px solid var(--light-bg-color-1);
+    margin: 0 1rem 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .plug-tags {
     display: flex;
     justify-content: end;
-    border-top: 1px solid var(--light-bg-color-1);
-    margin: 0 1rem 0 1rem;
     gap: 1rem;
 }
 
