fix: details in plug page are in box's bounds, fix: proper message shows when server's down, fix: now errors are catched in fetching saved and favorites plugins

--- a/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
+++ b/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
@@ -14,6 +14,12 @@
     justify-content: space-between;
 }
 
+.info-container {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 #lower-plug-aside {
     height: 65%;
     padding: 0.5em;
