feat: added search boxes to some pages, feat: removed filter dropdown from those pages, feat: showing details for contributions and activities in a dedicated modal

--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -8,6 +8,7 @@ aside {
     justify-content: space-between;
     border-right: 1px solid var(--light-bg-color-1);
     background-color: var(--light-bg-color-4);
+    overflow-y: auto;
 }
 
 .aside-controls {
