--- a/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
+++ b/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: auto;
 }
 
 .info-container {
