--- a/src/components/Common/ColoredDivider/ColoredDivider.css
+++ b/src/components/Common/ColoredDivider/ColoredDivider.css
@@ -1,8 +1,8 @@
 @import '../../../styles/themes.css';
 
 #colored-divider {
-    margin: 1rem 0;
+    display: block;
     color: inherit;
     opacity: .20;
-    border-bottom: 1px solid var(--light-color-2);
+    border-bottom: 1px solid var(--bg-color-8);
 }
