--- a/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
+++ b/src/components/Aside/PlugPageCtrls/PlugPageCtrls.css
@@ -2,13 +2,13 @@
 
 #upper-plug-aside {
     padding: 0.5em;
-    border: 1px solid var(--light-bg-color-5);
+    border: 1px solid var(--bg-color-4);
     border-radius: 0.25rem;
     font-size: 1rem;
     font-weight: bolder;
     margin: 0;
     height: 30%;
-    color: var(--light-color-1);
+    color: var(--color-1);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -25,7 +25,7 @@
     height: 65%;
     padding: 0.5em;
     margin-bottom: 0.7em;
-    border: 1px solid var(--light-bg-color-5);
+    border: 1px solid var(--bg-color-4);
     border-radius: 0.25rem;
     font-size: 1rem;
     font-weight: bolder;
@@ -36,7 +36,8 @@
 
 .generated {
     overflow-y: auto;
-    background-color: #ffffff;
+    background-color: var(--bg-color-1);
+    color: var(--color-1);
     border-radius: 0.25rem;
     scrollbar-width: none;
     margin-bottom: 1em;
@@ -49,5 +50,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: var(--light-color-2);
+    color: var(--color-2);
 }
