--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -6,9 +6,9 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: var(--light-bg-color-1);
+    background-color: var(--bg-color-4);
     padding: 10px;
-    color: var(--light-color-1);
+    color: var(--color-1);
     z-index: 2;
     height: var(--header-height);
     display: flex;
@@ -48,7 +48,12 @@ h1 {
     }
 
     #hamburger-for-side-bar {
+        background-color: var(--bg-color-4);
         display: block;
+    }
+
+    #hamburger-for-side-bar:hover {
+        background-color: var(--bg-color-4);
     }
 }
 
