--- a/src/components/Legal/PrivacyPolicy/PrivacyPolicy.css
+++ b/src/components/Legal/PrivacyPolicy/PrivacyPolicy.css
@@ -1,3 +1,5 @@
+@import '../../../styles/themes.css';
+
 #privacy-policy-container {
     height: fit-content;
     padding-left: 5em;
@@ -13,7 +15,7 @@
     align-items: center;
     gap: 1em;
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid var(--bg-color-8);
     border-radius: 1em;
     padding: 1em;
     margin-bottom: 1em;
