--- a/src/components/Main/List/List.css
+++ b/src/components/Main/List/List.css
@@ -1,3 +1,5 @@
+@import '../../../styles/themes.css';
+
 #items-container {
     width: 100%;
     height: fit-content;
@@ -8,9 +10,9 @@
 }
 
 .list-group-item.active {
-    color: #000;
-    background-color: #e8e8e8 !important;
-    border: 1px solid #e8e8e8 !important;
+    color: var(--color-4);
+    background-color: var(--bg-color-4) !important;
+    border: 1px solid var(--bg-color-4) !important;
 }
 
 .list-group-item:last-child {
