--- a/src/components/Main/List/ListItem/ListItem.css
+++ b/src/components/Main/List/ListItem/ListItem.css
@@ -1,3 +1,5 @@
+@import '../../../../styles/themes.css';
+
 /* list view */
 .list-item-plugin {
     display: flex;
@@ -6,10 +8,12 @@
     cursor: pointer;
     width: 100%;
     height: 145px;
+    color: var(--color-1);
+    background-color: var(--bg-color-1);
 }
 
 .list-item-plugin:hover {
-    background-color: #efefef;
+    background-color: var(--bg-color-2);
 }
 
 .list-image-container {
@@ -87,7 +91,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e0e0e0;
+    background-color: var(--bg-color-3);
 }
 
 .gallery-plugin-image {
