--- a/src/pages/AdminsPage/Users/Users.css
+++ b/src/pages/AdminsPage/Users/Users.css
@@ -1,3 +1,5 @@
+@import '../../../styles/themes.css';
+
 .table-wrapper {
     padding: 1em;
     width: 100%;
@@ -13,6 +15,8 @@
     text-align: center;
     height: fit-content;
     margin-bottom: 0;
+    color: var(--color-2);
+    border-color: var(--bg-color-4);
 }
 
 .users-tr {
