--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -1,4 +1,5 @@
 @import '../../styles/layout.css';
+@import '../../styles/themes.css';
 
 .not-found-container {
     display: flex;
@@ -21,7 +22,7 @@
 .not-found-text {
     font-size: 1.5em;
     margin-bottom: 20px;
-    color: #757575;
+    color: var(--color-4);
 }
 
 .not-found-link {
