--- a/src/styles/auth-card.css
+++ b/src/styles/auth-card.css
@@ -1,3 +1,5 @@
+@import '../styles/themes.css';
+
 .authentication-form {
     display: flex;
     width: 100%;
@@ -15,8 +17,23 @@ form {
     width: 100%;
 }
 
+.card {
+    border: 1px solid var(--bg-color-3);
+}
+
 .card-header {
     text-align: center;
+    background-color: var(--bg-color-2);
+    color: var(--color-2);
+}
+
+.card-main {
+    background-color: var(--bg-color-3);
+}
+
+.card-body {
+    background-color: var(--bg-color-2);
+    color: var(--color-2);
 }
 
 #forgot-password-announcement {
