--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -1,9 +1,41 @@
 :root {
-    --light-bg-color-1: #dbdbdb;
-    --light-bg-color-2: #e9e9e9;
-    --light-bg-color-3: #ffffff;
-    --light-bg-color-4: #f4f4f4;
-    --light-bg-color-5: #dfdfdf;
-    --light-color-1: #646464;
-    --light-color-2: #757575;
+    /* Light Mode */
+    --bg-color-1: #ffffff;
+    --bg-color-2: #f0f0f0;
+    --bg-color-3: #e0e0e0;
+    --bg-color-4: #d0d0d0;
+    --bg-color-5: #808080;
+    --bg-color-6: #515151;
+    --bg-color-7: #6c757d40;
+    --bg-color-8: #000000;
+
+    --color-1: #212529;
+    --color-2: #212529;
+    --color-3: #212529;
+    --color-4: #212529;
+    --color-5: #ffffff;
+    --color-6: #ffffff;
+    --color-7: #212529;
+    --color-8: #212529;
+}
+
+.dark-mode {
+    /* Dark Mode */
+    --bg-color-1: #0e0f11;
+    --bg-color-2: #2a2a2a;
+    --bg-color-3: #333333;
+    --bg-color-4: #515151;
+    --bg-color-5: #808080;
+    --bg-color-6: #d0d0d0;
+    --bg-color-7: #e0e0e0;
+    --bg-color-8: #f0f0f0;
+
+    --color-1: #ffffff;
+    --color-2: #ffffff;
+    --color-3: #ffffff;
+    --color-4: #ffffff;
+    --color-5: #000000;
+    --color-6: #000000;
+    --color-7: #000000;
+    --color-8: #000000;
 }
