--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -20,6 +20,8 @@ aside {
 }
 
 .aside-controls:hover {
+    color: var(--color-3);
+    background-color: var(--bg-color-3)!important;
     box-shadow: 0px 0px 2px var(--bg-color-6);
     transition: box-shadow 0.1s ease-in-out;
 }
