--- a/src/components/Aside/HomePageCtrls/HomePageCtrls.css
+++ b/src/components/Aside/HomePageCtrls/HomePageCtrls.css
@@ -1,9 +1,16 @@
 .offcanvas-body {
-    padding: 3% 3% 1% 3%;
+    padding: 3%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+#home-page-aside-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
 }
 
 #big-screens-lower-aside {
