--- a/src/components/Download/DownloadButton.css
+++ b/src/components/Download/DownloadButton.css
@@ -13,7 +13,7 @@
     border-style: solid;
     cursor: pointer;
     transition: bottom 0.2s ease-in;
-    color: var(--bg-color-8);
+    color: var(--color-2);
     box-shadow: 0px 0px 3px var(--bg-color-8);
 }
 
