--- a/src/components/Main/List/ListItem/ListItem.css
+++ b/src/components/Main/List/ListItem/ListItem.css
@@ -10,6 +10,7 @@
     height: 145px;
     color: var(--color-1);
     background-color: var(--bg-color-1);
+    border: 1px solid var(--bg-color-3);
 }
 
 .list-item-plugin:hover {
