--- a/src/styles/dropdowns.css
+++ b/src/styles/dropdowns.css
@@ -11,6 +11,7 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .customed-dropdown-item:hover {
