--- a/src/components/Common/Spinner/Spinner.css
+++ b/src/components/Common/Spinner/Spinner.css
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     background-color: inherit;
+    border-radius: inherit;
 }
 
 .spinner-grow {
