--- a/src/pages/PlugPage/PlugPage.css
+++ b/src/pages/PlugPage/PlugPage.css
@@ -33,6 +33,12 @@
     justify-content: space-between;
 }
 
+.price-link {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
 .plug-tags {
     display: flex;
     justify-content: end;
