--- a/src/styles/auth-card.css
+++ b/src/styles/auth-card.css
@@ -1,5 +1,3 @@
-@import '../styles/themes.css';
-
 .authentication-form {
     display: flex;
     width: 100%;
@@ -19,24 +17,24 @@ form {
 }
 
 .card {
-    border: 1px solid var(--bg-color-3);
-    background-color: unset;
+    border: 1px solid var(--bg-color-3) !important;
+    background-color: unset !important;
 }
 
 .card-header {
     text-align: center;
-    background-color: var(--bg-color-2);
-    color: var(--color-2);
-    border-bottom: 1px solid var(--bg-color-5);
+    background-color: var(--bg-color-2) !important;
+    color: var(--color-2) !important;
+    border-bottom: 1px solid var(--bg-color-5) !important;
 }
 
 .card-main {
-    background-color: var(--bg-color-3);
+    background-color: var(--bg-color-3) !important;
 }
 
 .card-body {
-    background-color: var(--bg-color-2);
-    color: var(--color-2);
+    background-color: var(--bg-color-2) !important;
+    color: var(--color-2) !important;
 }
 
 #forgot-password-announcement {
